update css /class 02

--- a/reset.css
+++ b/reset.css
@@ -11,6 +11,9 @@ body{
   background-repeat: no-repeat;
   background-size: cover;
 }
+body *{
+  font-family: 'Roboto', sans-serif;
+}
 ul{
   list-style: none;
 }
