--- a/style.css
+++ b/style.css
@@ -3,16 +3,22 @@
   margin: 52px auto;
 }
 header{
+  text-align: center;
   margin-bottom: 64px;
 }
-.cards{
+#cards{
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+.card{
   padding: 32px 23px;
   text-align: center;
   background: #1D1C19;
   border-bottom: 2px solid #F7DD43;
   border-radius: 6px;
 }
-.cards .card h2{
+#cards .card h2{
   display: flex;
   gap: 16px;
   justify-content: center;
@@ -27,7 +33,7 @@ header{
   font-size: 24px;
   font-weight: bold;
 }
-.cards .card h2 span{
+#cards .card h2 span{
   color: #E1E1E6;
   font-size: 14px;
   font-weight: bold;
