class 04/refactoring/colors/animation

--- a/reset.css
+++ b/reset.css
@@ -11,9 +11,34 @@ body{
   background-repeat: no-repeat;
   background-size: cover;
 }
+body.blue {
+  --card-color: #338AF3;
+  --card-title-border-color: #338AF3; 
+  --card-bg-color: #202024;
+}
+body.green{
+  --card-color: #047C3F;
+  --card-title-border-color: #047C3F;  
+  --card-bg-color: #1A1F1B;
+}
 body *{
   font-family: 'Roboto', sans-serif;
 }
 ul{
   list-style: none;
+}
+:root{
+  --card-color: #f7dd43;
+  --card-title-border-color: #766615;
+  --card-bg-color: #1d1c19;
+}
+
+@keyframes appear {
+  0% {
+    opacity: 0;
+    transform: translateY(-50px);
+  }
+  100% {
+    opacity: 1;
+  }
 }
